Fix margin around Teads outstreams on mobile

--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -313,10 +313,7 @@
     @include mq(mobile) {
         width: 300px;
         height: auto;
-
-        & > div.ad-slot__content > iframe {
-            min-height: 250px;
-        }
+        min-height: auto;
     }
 
     @include mq(desktop) {
